# IOT

./: audio_detect.service  audio_ir_remote.py  audio_mqtt_publisher.py  audiomgr.py  broadlink.py  broadlink_learner.py
audio-detecter/: CMakeLists.txt
audio-detecter/.AppleDouble/: .Parent
audio-detecter/src/: Alsa.cpp  Alsa.h  Pulse.cpp  Pulse.h  main.cpp
